<?xml version="1.0" encoding="utf-8"?>
<!-- Created by: Edmond Wang -->
<!-- name: activity_splash.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edmondwang.statesgame.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/splashBackgroundImageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/splash_background"
        android:scaleType="fitXY"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/playButton"
        android:layout_marginBottom="135dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:onClick="playHandler"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_button"
        android:id="@+id/scoresButton"
        android:layout_alignTop="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="scoreHandler"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textSize="48sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/splashBackgroundImageView"
        android:background="@color/opaque"
        android:padding="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@color/white"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:visibility="invisible"
        android:hint="@string/name_hint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
