<?xml version="1.0" encoding="utf-8"?>
<!-- Created by: Edmond Wang -->
<!-- name: activity_game.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edmondwang.statesgame.GameActivity"
    android:background="@color/material_deep_teal_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/score"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="Player Name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/questionTextView"
        android:textSize="20sp"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/radioGroup"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answerEditText"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignEnd="@+id/submitButton"
        android:layout_toEndOf="@+id/nameTextView"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/submitButton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:id="@+id/radioButton"
            android:layout_below="@+id/questionTextView"
            android:layout_centerHorizontal="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_alignEnd="@+id/questionTextView"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitButton"
        android:layout_marginBottom="101dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="submitHandler"/>

</RelativeLayout>
